[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainGame/Quit.gd" type="Script" id=1]
[ext_resource path="res://Images/tie.png" type="Texture" id=2]
[ext_resource path="res://MainGame/menu.gd" type="Script" id=3]
[ext_resource path="res://MainGame/Start.gd" type="Script" id=5]
[ext_resource path="res://COMIC.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://MainGame/Options.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.772217
margin_top = 0.735107
margin_right = -0.772217
margin_bottom = 0.735107
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="Layout"]
margin_top = 67.0
margin_right = 1280.0
margin_bottom = 119.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Layout/Title"]
margin_left = 352.0
margin_right = 928.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Space Invaders Clone 11037"
uppercase = true

[node name="LeaderBoard" type="VBoxContainer" parent="Layout"]
margin_top = 123.0
margin_right = 1280.0
margin_bottom = 155.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard Label" type="Label" parent="Layout/LeaderBoard"]
margin_right = 1280.0
margin_bottom = 14.0
text = "Leader Board:"
align = 1

[node name="LeaderboardScores" type="Label" parent="Layout/LeaderBoard"]
margin_top = 18.0
margin_right = 1280.0
margin_bottom = 32.0
align = 1

[node name="Main" type="HBoxContainer" parent="Layout"]
margin_top = 159.0
margin_right = 1280.0
margin_bottom = 609.0
alignment = 1

[node name="ScreenShot" type="TextureRect" parent="Layout/Main"]
margin_left = 372.0
margin_right = 723.0
margin_bottom = 450.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/Main"]
margin_left = 727.0
margin_right = 903.0
margin_bottom = 450.0
alignment = 1

[node name="Start" type="Button" parent="Layout/Main/VBoxContainer"]
margin_right = 176.0
margin_bottom = 147.0
size_flags_vertical = 3
text = "Go ahead. Click me. Start."
script = ExtResource( 5 )

[node name="Options" type="Button" parent="Layout/Main/VBoxContainer"]
margin_top = 151.0
margin_right = 176.0
margin_bottom = 298.0
size_flags_vertical = 3
text = "Options"
script = ExtResource( 8 )

[node name="Quit" type="Button" parent="Layout/Main/VBoxContainer"]
margin_top = 302.0
margin_right = 176.0
margin_bottom = 450.0
size_flags_vertical = 3
text = "Run Away"
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Layout/Main"]
margin_left = 907.0
margin_top = 218.0
margin_right = 907.0
margin_bottom = 232.0

[node name="Credits" type="HBoxContainer" parent="Layout"]
margin_top = 613.0
margin_right = 1280.0
margin_bottom = 653.0
alignment = 1

[node name="Label" type="Label" parent="Layout/Credits"]
margin_left = 400.0
margin_right = 880.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Copyright BosstheBIGSHOT (Bailey)"
[connection signal="pressed" from="Layout/Main/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Layout/Main/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Layout/Main/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
